--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,46 @@
 :root{
   --white : rgb(240,217,181);
   --black : rgb(181,136,99);
+  background-color: #282c34;
 }
 
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button{
+  background-color: var(--black);
+  color: var(--white);
+  border: 1px solid var(--white);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+  font-size: 1.5em;
+  font-family: 'Roboto', sans-serif;
 }
-
-.App-link {
-  color: #61dafb;
+.button:hover{
+  background-color: var(--white);
+  color: var(--black);
+  border: 1px solid var(--black);
 }
 
 .square {
   width: 100px;
   height: 100px;
-  /* border: 1px solid rgb(46, 46, 46); */
+  border: 0px;
 }
 .square:hover {
-  border: 1px solid rgb(46, 46, 46);
+  /* border: 1px solid rgb(46, 46, 46); */
   scale: 1.1;
-  transition: 0.1s;
+}
+
+.square img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
 }
 
 .board {
@@ -35,12 +49,4 @@
   grid-template-rows: repeat(8, 100px);
   width: 400px;
   height: 300px;
-}
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
