--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 :root{
   --white : rgb(240,217,181);
   --black : rgb(181,136,99);
+  --red : rgb(235, 97, 80);
+
   background-color: #282c34;
 }
 
@@ -8,6 +10,36 @@
   display: flex;
   flex-direction: column;
   align-items: center; 
+}
+.App-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0.3rem;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(8, calc(100% / 8));
+  grid-template-rows: repeat(8, calc(100% / 8));
+  width: 90vh;
+  aspect-ratio: 1;
+}
+
+.input {
+  font-size: 1.3rem;
+  padding : 0.3rem;
+  text-align: center;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  outline: none;
+  background-color: transparent;
+  color: var(--white);
+}
+.input::-webkit-inner-spin-button, 
+.input::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
 }
 
 .button{
@@ -27,26 +59,39 @@
 }
 
 .square {
-  width: 100px;
-  height: 100px;
+  position: relative;
+  width: 100%;
+  height: 100%;
   border: 0px;
+  box-shadow: 0;
+  transition: all 0.1s ease;
 }
 .square:hover {
-  /* border: 1px solid rgb(46, 46, 46); */
-  scale: 1.1;
+  /* border: 2px solid rgb(34, 34, 34); */
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  z-index: 1;
+  scale: 1.05;
+  transition: all 0.1s ease;
 }
-
 .square img{
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   opacity: 0;
+  transition: all 0.1s ease;
 }
 
-.board {
-  display: grid;
-  grid-template-columns: repeat(8, 100px);
-  grid-template-rows: repeat(8, 100px);
-  width: 400px;
-  height: 300px;
+.highlight{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0 ;
+  background-color: var(--red);
+  transition: all 0.1s ease;
 }
+
