--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,6 @@
   align-items: center; 
 }
 .App-header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   padding: 0.3rem;
 }
 
@@ -34,6 +32,7 @@
   outline: none;
   background-color: transparent;
   color: var(--white);
+  transition: all 0.1s ease;
 }
 .input::-webkit-inner-spin-button, 
 .input::-webkit-outer-spin-button { 
@@ -41,8 +40,13 @@
   -moz-appearance: none;
        appearance: none;
 }
+ .input:hover, .input:focus {
+  border: 2px solid var(--white);
+  scale: 1.02;
+}
 
 .button{
+  cursor: pointer;;
   background-color: var(--black);
   color: var(--white);
   border: 1px solid var(--white);
@@ -51,14 +55,17 @@
   margin: 5px;
   font-size: 1.5em;
   font-family: 'Roboto', sans-serif;
+  transition: all 0.1s ease;
 }
 .button:hover{
   background-color: var(--white);
   color: var(--black);
   border: 1px solid var(--black);
+  scale: 1.02;
 }
 
 .square {
+  cursor: pointer;
   position: relative;
   width: 100%;
   height: 100%;
