--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,16 @@
 .App-header {
   padding: 0.3rem;
 }
+.boardContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  padding: 0.3rem;
+}
 
 .board {
+  padding: 0.3rem;
   display: grid;
-  grid-template-columns: repeat(8, calc(100% / 8));
-  grid-template-rows: repeat(8, calc(100% / 8));
   width: 90vh;
   aspect-ratio: 1;
 }
