--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 :root{
   --white : rgb(240,217,181);
   --black : rgb(181,136,99);
+  --grey : rgb(211, 211, 211);
   --red : rgb(235, 97, 80);
   --green : rgb(97, 235, 80);
+  --boardSize : 8;
 
   background-color: #282c34;
 }
@@ -54,10 +56,11 @@
 .rightArrow button:disabled {
   scale: 0;
 }
-.maxLeft button:hover,
-.maxRight button:hover,
-.leftArrow button:hover,
-.rightArrow button:hover {
+
+.maxLeft button:hover:not([disabled]),
+.maxRight button:hover:not([disabled]),
+.leftArrow button:hover:not([disabled]),
+.rightArrow button:hover:not([disabled]) {
   background-color: var(--white);
   color: var(--black);
   border: 1px solid var(--black);
@@ -110,6 +113,7 @@
     flex-direction: column;
     justify-content: space-around;
   }
+  
 }
 
 input {
@@ -152,6 +156,14 @@ input::-webkit-outer-spin-button {
   border: 1px solid var(--black);
   scale: 1.02;
 }
+.button:disabled{
+  background-color: var(--gray);
+  color: var(--white);
+  border: 1px solid var(--white);
+  scale: 1;
+  cursor: default;
+
+}
 
 .square {
   cursor: pointer;
@@ -162,6 +174,12 @@ input::-webkit-outer-spin-button {
   box-shadow: 0;
   transition: all 0.1s ease;
 }
+.square p{
+  font-size: calc(30vh/var(--boardSize));
+  font-family: 'Roboto', sans-serif;
+  transition: all 0.1s ease;
+}
+
 .square:hover {
   /* border: 2px solid rgb(34, 34, 34); */
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -177,10 +195,24 @@ input::-webkit-outer-spin-button {
   height: 100%;
   object-fit: cover;
   /* opacity: 0; */
-  /* scale: 0; */
+  scale: 0;
   transition: all 0.2s ease;
 }
-
+.square div{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: var(--red);
+  transition: all 0.2s ease;
+}
+.hasQueen img{
+  /* opacity: 1; */
+  scale: 1;
+  transition: all 0.2s ease;
+}
 
 .highlight{
   position: absolute;
@@ -190,6 +222,6 @@ input::-webkit-outer-spin-button {
   height: 100%;
   opacity: 0;
   background-color: var(--red);
-  transition: all 0.2s ease;
+  transition: background-color 0.2s ease;
 }
 
