Optimized queen assignment and organized code

--- a/src/App.css
+++ b/src/App.css
@@ -8,134 +8,11 @@
 
   background-color: #282c34;
 }
-
+/* APP */
 .App {
   display: flex;
   flex-direction: column;
   align-items: center; 
-}
-.buttonContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 0.3rem;
-}
-.boardContainer{
-  display: grid;
-  grid-template-areas: 
-    "input input input input input"
-    "maxLeft left board right maxRight"; 
-  grid-template-columns: 2em 2em 1fr 2em 2em;
-  grid-template-rows: 2.5em 1fr;
-  grid-gap: 0.3rem;
-  padding: 0.3rem;
-}
-/* ARROW BUTTONS */
-.maxLeft button,
-.maxRight button,
-.leftArrow button,
-.rightArrow button {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  cursor: pointer;
-  background-color: var(--black);
-  color: var(--white);
-  border: 1px solid var(--white);
-  border-radius: 5px;
-  padding: 5px;
-  font-size: 1.5em;
-  font-family: 'Roboto', sans-serif;
-  transition: all 0.1s ease;
-}
-.maxLeft button:disabled,
-.maxRight button:disabled,
-.leftArrow button:disabled,
-.rightArrow button:disabled {
-  scale: 0;
-}
-
-.maxLeft button:hover:not([disabled]),
-.maxRight button:hover:not([disabled]),
-.leftArrow button:hover:not([disabled]),
-.rightArrow button:hover:not([disabled]) {
-  background-color: var(--white);
-  color: var(--black);
-  border: 1px solid var(--black);
-  scale: 1.02;
-}
-
-.leftArrow{
-  content: "&#60;";
-  grid-area: left;
-  position: relative;
-  height: 100%;
-}
-.rightArrow{
-  content: "&#62;";
-  grid-area: right;
-  position: relative;
-  height: 100%;
-}
-.maxLeft {
-  content: "&#60;&#60;";
-  grid-area: maxLeft;
-  position: relative;
-  height: 100%;
-}
-.maxRight {
-  content: "&#62;&#62;";
-  grid-area: maxRight;
-  position: relative;
-  height: 100%;
-}
-
-.input{
-  grid-area: input;
-  margin: auto;
-}
-
-.board {
-  padding: 0.3rem;
-  display: grid;
-  width: 85vh;
-  aspect-ratio: 1;
-}
-@media (max-width: 50em) {
-  .board {
-    width: 50vh;
-  }
-  .buttonContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-  
-}
-
-/* INPUTS */
-input {
-  font-size: 1.3rem;
-  padding: 0.3rem;
-  text-align: center;
-  border: 2px solid var(--black);
-  border-radius: 5px;
-  outline: none;
-  background-color: transparent;
-  color: var(--white);
-  transition: all 0.1s ease;
-}
-input::-webkit-inner-spin-button, 
-input::-webkit-outer-spin-button { 
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-}
- input:hover, input:focus {
-  border: 2px solid var(--white);
-  scale: 1.01;
 }
 
 /* BUTTONS */
@@ -163,7 +40,122 @@ input::-webkit-outer-spin-button {
   border: 1px solid var(--white);
   scale: 1;
   cursor: default;
+}
 
+/* INPUT BOXES*/
+input {
+  margin: auto;
+  font-size: 1.3rem;
+  padding: 0.3rem;
+  text-align: center;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  outline: none;
+  background-color: transparent;
+  color: var(--white);
+  transition: all 0.1s ease;
+}
+input::-webkit-inner-spin-button, 
+input::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+}
+ input:hover, input:focus {
+  border: 2px solid var(--white);
+  scale: 1.01;
+}
+
+/* BUTTON CONTAINER */
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 0.3rem;
+}
+
+/* BOARD CONTAINER */
+.boardContainer{
+  display: grid;
+  grid-template-areas: 
+    "input input input input input"
+    "maxLeft left board right maxRight"; 
+  grid-template-columns: 2em 2em 1fr 2em 2em;
+  grid-template-rows: 2.5em 1fr;
+  grid-gap: 0.3rem;
+  padding: 0.3rem;
+}
+.boardButtons{
+  grid-area: input;
+  margin: auto;
+}
+
+/* ARROW BUTTONS */
+.maxLeft button,
+.maxRight button,
+.leftArrow button,
+.rightArrow button {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  background-color: var(--black);
+  color: var(--white);
+  border: 1px solid var(--white);
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 1.5em;
+  font-family: 'Roboto', sans-serif;
+  transition: all 0.1s ease;
+}
+.maxLeft button:disabled,
+.maxRight button:disabled,
+.leftArrow button:disabled,
+.rightArrow button:disabled {
+  scale: 0;
+}
+.maxLeft button:hover:not([disabled]),
+.maxRight button:hover:not([disabled]),
+.leftArrow button:hover:not([disabled]),
+.rightArrow button:hover:not([disabled]) {
+  background-color: var(--white);
+  color: var(--black);
+  border: 1px solid var(--black);
+  scale: 1.02;
+}
+.leftArrow{
+  content: "&#60;";
+  grid-area: left;
+  position: relative;
+  height: 100%;
+}
+.rightArrow{
+  content: "&#62;";
+  grid-area: right;
+  position: relative;
+  height: 100%;
+}
+.maxLeft {
+  content: "&#60;&#60;";
+  grid-area: maxLeft;
+  position: relative;
+  height: 100%;
+}
+.maxRight {
+  content: "&#62;&#62;";
+  grid-area: maxRight;
+  position: relative;
+  height: 100%;
+}
+
+/* BOARD */
+.board {
+  padding: 0.3rem;
+  display: grid;
+  width: 85vh;
+  aspect-ratio: 1;
 }
 
 /* SQUARES */
@@ -226,3 +218,14 @@ input::-webkit-outer-spin-button {
   transition: background-color 0.2s ease;
 }
 
+/* MEDIA QUERIES */
+@media (max-width: 50em) {
+  .board {
+    width: 50vh;
+  }
+  .buttonContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+}
