--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,15 @@
   background-color: var(--white);
   color: var(--black);
   border: 1px solid var(--black);
-  scale: 1.02;
+  /* scale: 1.02; */
+  transform: scale(1.02);
 }
 .button:disabled{
   background-color: var(--gray);
   color: var(--white);
   border: 1px solid var(--white);
-  scale: 1;
+  /* scale: 1; */
+  transform: scale(1);
   cursor: default;
 }
 
@@ -63,7 +65,8 @@ input::-webkit-outer-spin-button {
 }
  input:hover, input:focus {
   border: 2px solid var(--white);
-  scale: 1.01;
+  /* scale: 1.01; */
+  transform: scale(1.01);
 }
 
 /* BUTTON CONTAINER */
@@ -99,7 +102,7 @@ input::-webkit-outer-spin-button {
   left: 50%;
   top: 50%;
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   cursor: pointer;
   background-color: var(--black);
   color: var(--white);
@@ -114,7 +117,8 @@ input::-webkit-outer-spin-button {
 .maxRight button:disabled,
 .leftArrow button:disabled,
 .rightArrow button:disabled {
-  scale: 0;
+  /* scale: 0; */
+  transform: translate(-50%, -50%) scale(0);
 }
 .maxLeft button:hover:not([disabled]),
 .maxRight button:hover:not([disabled]),
@@ -123,7 +127,9 @@ input::-webkit-outer-spin-button {
   background-color: var(--white);
   color: var(--black);
   border: 1px solid var(--black);
-  scale: 1.02;
+  /* scale: 1.02; */
+  transform: translate(-50%, -50%) scale(1.02);
+
 }
 .leftArrow{
   content: "&#60;";
@@ -178,7 +184,8 @@ input::-webkit-outer-spin-button {
   /* border: 2px solid rgb(34, 34, 34); */
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   z-index: 1;
-  scale: 1.05;
+  /* scale: 1.05; */
+  transform: scale(1.05);
   transition: all 0.1s ease;
 }
 .square img{
@@ -189,7 +196,8 @@ input::-webkit-outer-spin-button {
   height: 100%;
   object-fit: cover;
   /* opacity: 0; */
-  scale: 0;
+  /* scale: 0; */
+  transform: scale(0);
   transition: all 0.2s ease;
 }
 .square div{
@@ -204,7 +212,8 @@ input::-webkit-outer-spin-button {
 }
 .hasQueen img{
   /* opacity: 1; */
-  scale: 1;
+  /* scale: 1; */
+  transform: scale(1);
   transition: all 0.2s ease;
 }
 .highlight{
